--- a/esercizio-mail/index.html
+++ b/esercizio-mail/index.html
@@ -9,6 +9,15 @@
     <title>js-mail-dadi</title>
 </head>
 <body>
+
+    <h1>Inserisci email</h1>
+    <form id="access-form">
+        <label for="email">Inserisci la tua email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Verifica Accesso</button>
+    </form>
+       
+
     <!-- js -->
     <script src="js/scripts.js"></script>
 </body>
