--- a/esercizio-mail/index.html
+++ b/esercizio-mail/index.html
@@ -16,7 +16,7 @@
         <input type="email" id="email" name="email" required>
         <button type="submit">Verifica Accesso</button>
     </form>
-       
+        <p id="result-message"></p>
 
     <!-- js -->
     <script src="js/scripts.js"></script>
