--- a/esercizio-dadi/index.html
+++ b/esercizio-dadi/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+    <h1>Gioco dei dadi</h1>
+    
+    <p id="result"></p>
 
     <!-- js -->
     <script src="js/scripts.js"></script>
